feat(login): worked on tests and some refactoring