@@ -1,6 +1,6 @@
 package movie_master.api.controller;
 
-import movie_master.api.jwt.DefaultJWTUtil;
+import movie_master.api.jwt.JwtUtil;
 import movie_master.api.model.User;
 import movie_master.api.model.detail.CustomUserDetails;
 import movie_master.api.request.LoginRequest;
@@ -18,29 +18,30 @@ import org.springframework.security.authentication.BadCredentialsException;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.web.bind.MethodArgumentNotValidException;
 
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 @ExtendWith(MockitoExtension.class)
 public class AuthControllerTests {
     @Mock private AuthenticationManager authenticationManager;
-    @Mock private DefaultJWTUtil jwtUtil;
+    @Mock private JwtUtil jwtUtil;
+    @Mock private Authentication authentication;
+    @Mock private BadCredentialsException badCredentialsException;
+    @Mock private MethodArgumentNotValidException methodArgumentNotValidException;
     @InjectMocks private AuthController authController;
 
     @Test
-    void loginSuccessfully() {
-        // Given
+    void userCanLogin() {
         User user = new User("mock@gmail.com", "mock","mocked", "USER", true);
-        CustomUserDetails userDetails = new CustomUserDetails(user);
+        user.setUserId(1L);
 
         LoginRequest loginRequest = new LoginRequest("mock", "mocked");
 
-        Authentication authentication = Mockito.mock(Authentication.class);
+        CustomUserDetails userDetails = new CustomUserDetails(user);
 
         Long userId = userDetails.getUserId();
         String username = userDetails.getUsername();
@@ -48,41 +49,32 @@ public class AuthControllerTests {
                 .getAuthorities()
                 .stream()
                 .map(GrantedAuthority::getAuthority)
-                .collect(Collectors.toList());
+                .toList();
 
-        Map<String, Object> claims = new HashMap<>();
-        claims.put("userId", userId);
-        claims.put("roles", roles);
+        Map<String, Object> claims = Map.of("userId", userId, "roles", roles);
 
         String jwt = "this_is_a_jwt_mock";
 
         Mockito.when(authenticationManager.authenticate(UsernamePasswordAuthenticationToken
                 .unauthenticated(loginRequest.username(), loginRequest.password()))).thenReturn(authentication);
         Mockito.when(authentication.getPrincipal()).thenReturn(userDetails);
-        Mockito.when(jwtUtil.generateToken(claims, username)).thenReturn(jwt);
+        Mockito.when(jwtUtil.generateJwt(claims, username)).thenReturn(jwt);
 
-        // When
         ResponseEntity<Object> result = authController.login(loginRequest);
 
-        // Then
         assertEquals(result.getStatusCode(), HttpStatusCode.valueOf(HttpStatus.OK.value()));
         assertEquals(result.getBody(), jwt);
     }
 
     @Test
-    void loginFailed() {
-        // Given
-        LoginRequest loginRequest = new LoginRequest("mock", "mocked");
-
-        BadCredentialsException badCredentialsException = Mockito.mock(BadCredentialsException.class);
+    void userCantLoginWithBadCredentials() {
+        LoginRequest loginRequest = new LoginRequest("mock", "incorrect_password");
 
         Mockito.when(authenticationManager.authenticate(UsernamePasswordAuthenticationToken
                 .unauthenticated(loginRequest.username(), loginRequest.password()))).thenThrow(badCredentialsException);
 
-        // When
         ResponseEntity<Object> result = authController.login(loginRequest);
 
-        // Then
         assertEquals(result.getStatusCode(), HttpStatusCode.valueOf(HttpStatus.UNAUTHORIZED.value()));
         assertEquals(result.getBody(), badCredentialsException.getMessage());
     }
